feat: spike complete enough

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,16 @@
     transform: rotate(360deg);
   }
 }
+
+.table-row {
+
+}
+
+.flex-container {
+  display: flex;
+  align-items: center;
+}
+
+.ReactVirtualized__Table__headerRow {
+  
+}
